<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment">

    <TextView
        android:id="@+id/txtLastSevenDaysHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/txtLastSevenDaysHeader"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="414dp"
        android:layout_height="170dp"
        android:background="#CAE4DB"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.0">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imgNumberToothbrushingResult"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginEnd="130dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/imgToothIcon"
        app:layout_constraintVertical_bias="0.592"
        tools:srcCompat="@drawable/ok_icon" />

    <TextView
        android:id="@+id/txtNumberToothbrushesCompletedResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtToothbrushesCompleted"
        app:layout_constraintTop_toBottomOf="@+id/txtToothbrushesCompleted"
        tools:text="10" />

    <ImageView
        android:id="@+id/imgToothIcon"
        android:layout_width="58dp"
        android:layout_height="85dp"
        android:layout_marginStart="130dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/toothbrushIcon"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:srcCompat="@drawable/toothbrush_icon" />

    <TextView
        android:id="@+id/txtTotalNumberToothbrushes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txtOutOf"
        app:layout_constraintStart_toEndOf="@+id/txtOutOf"
        app:layout_constraintTop_toTopOf="@+id/txtOutOf"
        app:layout_constraintVertical_bias="0.0"
        tools:text="14" />

    <TextView
        android:id="@+id/txtToothbrushesCompleted"
        android:layout_width="172dp"
        android:layout_height="21dp"
        android:layout_marginBottom="50dp"
        android:text="@string/toothBrushesCompleted"
        app:layout_constraintBottom_toTopOf="@+id/imgToothIcon"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/txtOutOf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/OutOf"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txtNumberToothbrushesCompletedResult"
        app:layout_constraintStart_toEndOf="@+id/txtNumberToothbrushesCompletedResult"
        app:layout_constraintTop_toTopOf="@+id/txtNumberToothbrushesCompletedResult"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgHourGlass"
        android:layout_width="58dp"
        android:layout_height="63dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="152dp"
        android:contentDescription="@string/timeIcon"
        app:layout_constraintStart_toStartOf="@+id/imgToothIcon"
        app:layout_constraintTop_toBottomOf="@+id/imgToothIcon"
        app:srcCompat="@drawable/time_icon" />

    <TextView
        android:id="@+id/txtSec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/Sec"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txtAvgTimeResult"
        app:layout_constraintStart_toEndOf="@+id/txtAvgTimeResult"
        app:layout_constraintTop_toTopOf="@+id/txtAvgTimeResult"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtAvgTimeResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtAvgToothbrushTime"
        app:layout_constraintTop_toBottomOf="@+id/txtAvgToothbrushTime"
        tools:text="45" />

    <TextView
        android:id="@+id/txtAvgToothbrushTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/AvgToothbrushTime"
        app:layout_constraintEnd_toEndOf="@+id/txtLastSevenDaysHeader"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgAvgTimeResult"
        app:layout_constraintTop_toTopOf="@+id/imgAvgTimeResult" />

    <ImageView
        android:id="@+id/imgAvgTimeResult"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgHourGlass"
        app:layout_constraintStart_toEndOf="@+id/imgHourGlass"
        app:layout_constraintTop_toTopOf="@+id/imgHourGlass"
        app:layout_constraintVertical_bias="1.0"
        tools:srcCompat="@drawable/not_ok_icon" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="354dp" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="154dp" />


</androidx.constraintlayout.widget.ConstraintLayout>